--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
+    "element-plus": "^1.2.0-beta.5",
+    "sass": "^1.44.0",
+    "unplugin-auto-import": "^0.5.1",
+    "unplugin-vue-components": "^0.17.5",
     "vue": "^3.2.16"
   },
   "devDependencies": {
