--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==1.7.5
+aniso8601==9.0.1
 black==21.12b0
 click==8.0.3
 Flask==2.0.2
 Flask-Migrate==3.1.0
+Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 importlib-metadata==4.8.2
@@ -16,6 +18,8 @@ pathspec==0.9.0
 platformdirs==2.4.0
 PyMySQL==1.0.2
 python-dotenv==0.19.2
+pytz==2021.3
+six==1.16.0
 SQLAlchemy==1.4.27
 tomli==1.2.2
 typing-extensions==4.0.1
