--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aniso8601==9.0.1
 black==21.12b0
 click==8.0.3
 Flask==2.0.2
+flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
@@ -13,6 +14,8 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 Mako==1.1.6
 MarkupSafe==2.0.1
+marshmallow==3.14.1
+marshmallow-sqlalchemy==0.26.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.4.0
